<resources>
    <string name="app_name">ShareWiFi</string>

    <string name="agb">Terms of use\n of the ShareX software and exclusion of liability claims\n\nTranslation is missing!\n\nDie nachfolgenden <i>Allgemeinen Nutzungsbedingungen</i> gelten für die Nutzung der mobilen Applikationen <i>ShareWiFi</i> und <i>ShareMyContact</i> für Android, iOS und Windows, sowie der Desktop-Applikation <i>ShareWiFi</i> und <i>ShareMyContact</i> für Apple OSX, Linux und Windows nebst indirekter Nutzung der Datenspeicherung auf von <i>ShareWiFi/ShareMyContact</i> verwendeten Servern (zusammen die „ShareX-Software“).\n\nMit der ShareX-Software bieten die Betreiber (im Folgenden „wir“ bzw. „uns“) ihren Nutzern die Möglichkeit, veränderliche Daten wie WLAN-Einwahldaten (über die ShareX-App) oder Kontaktdaten (über die ShareContacts-App) (im Folgenden „Inhalte“) miteinander zu teilen. Alle dynamischen Inhalte der Applikationen sind von den Nutzern selbst erstellt und werden soweit nicht von Nutzer als „unangebracht“ gemeldet, nicht kontrolliert.\n\nWenn ein Nutzer Inhalte über ShareX-Software teilt, gewährt der Nutzer uns die Weitergabe über die ShareX-Software an wahlweise alle Nutzer, Nutzer in den vom teilenden Nutzer ausgewählten Kontaktlisten oder alle Geräte, auf denen der teilende Nutzer angemeldet ist. Der Nutzer bekommt über die ShareX-Software die Möglichkeit, anzugeben, welche Nutzer die von ihm geteilten Inhalte nutzen dürfen. Der Nutzer <b>versichert mit dem Prozess des Teilens von Inhalten, dass der Besitzer ausdrücklich mit dem Teilen der Inhalte über die ShareX-Software einverstanden ist</b> und mit den <b>Risiken der Nutzung der ShareX-Software vertraut</b> ist. Der Besitzer von Kontaktdaten ist der in den Kontaktdaten beschriebene Nutzer selbst. Der Besitzer eines WLAN-Netzes ist die im Internet-/Telefon-Vertrag angegebene Person.\n\n<b>Haftungsansprüche</b> gegenüber uns, welche sich auf Schäden materieller oder ideeller Art beziehen, die durch die Nutzung oder Nichtnutzung der geteilten Inhalte resultieren können, <b>sind grundsätzlich ausgeschlossen</b>. Wir behalten es uns ausdrücklich vor, Teile der ShareX-Software oder die gesamte ShareX-Software ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen oder die Veröffentlichung zeitweise oder endgültig einzustellen. Verstoßen Nutzer gegen diese Nutzungsbedingungen, behalten wir uns vor, den Account und alle geteilten Inhalte ohne Vorwarnung zu löschen.\n\nFür die Nutzung der Software muss sich der Nutzer registrieren. Dies ist notwendig, da eine eindeutige Identifikation für den Prozess des „Teilens“ notwendig ist und andere Nutzer wissen möchten, mit wem sie Inhalte teilen. Die Nutzung der im Registrierungsprozess abgefragten persönlichen Daten zu einem anderen Zweck als der Identifikation zwischen Benutzern der ShareX-Software wird ausdrücklich ausgeschlossen.</string>
    <string name="agb_accept">With proceeding you accept the full <![CDATA[<a href="">terms of use</a>]]>.</string>
    <string name="agb_terms_of_use">Terms of use</string>
    <string name="agb_short_title"><b>Brief summary of terms:</b></string>
    <string name="agb_short_item1">1. You <b>only share with permission</b> to the Wi-Fi owner. If not we are allowed to lock or even delete your account.</string>
    <string name="agb_short_item2">2. We give our best to protect your data but <b>usage is at your own risk</b>. Liability claims are excluded.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- 1:1 translations -->

    <string name="_cancel">@android:string/cancel</string>
    <string name="_no">@android:string/no</string>
    <string name="_yes">@android:string/yes</string>
    <string name="_settings">Settings</string>
    <string name="_continue">Continue</string>
    <string name="_close">Close</string>
    <string name="_accept">Accept</string>
    <string name="_decline">Decline</string>
    <string name="_done">Done</string>
    <string name="_contacts">Contacts</string>
    <string name="_login">Login</string>
    <string name="_logout">Logout</string>
    <string name="_undo">Undo</string>

    <string name="nav_header_networks">Networks</string>
    <string name="nav_allnetworks">All networks</string>
    <string name="nav_sharedbyme">Shared by me</string>
    <string name="nav_sharedwithme">Shared with me</string>

    <string name="nav_header_social">Social</string>
    <string name="nav_invite">Invite friends</string>

    <string name="nav_help">Questions and answers</string>

    <string name="nav_add_account">Add account</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_account_settings">Account settings</string>

    <string name="nav_noaccount_title">Not logged in</string>
    <string name="nav_noaccount_subtitle">Enter your credentials</string>

    <string name="snackbarmessage.loggedInAs">Logged in as %s</string>
    <string name="snackbarmessage.loggedOut">Logged out</string>

    <string name="sharedialog.title">Share %1$s?</string>
    <string name="sharedialog.title.alreadyshared">Continue sharing %1$s?</string>
    <string name="sharedialog.notification.subtitle">Do you want to share this Wi-Fi network?</string>

    <string name="sharedialog.option.worldwideshare.title">YES, WITH EVERYONE</string>
    <string name="sharedialog.option.worldwideshare.title2">WITH EVERYONE</string>
    <string name="sharedialog.option.worldwideshare.desc">Then everyone in the world can connect with this Wi-Fi.</string>
    <string name="sharedialog.option.groupshare.title">YES, WITH SELECTED CONTACTS</string>
    <string name="sharedialog.option.groupshare.title2">WITH SELECTED CONTACTS</string>
    <string name="sharedialog.option.groupshare.desc">Then all members of selected contact lists can connect with this Wi-Fi.</string>
    <string name="sharedialog.option.deviceshare.title">YES, WITH MY DEVICES</string>
    <string name="sharedialog.option.deviceshare.title2">WITH MY DEVICES</string>
    <string name="sharedialog.option.deviceshare.desc">Then all your devices where you are logged in can connect with this Wi-Fi.</string>
    <string name="sharedialog.option.do_not_share.title">NO, DO NOT SHARE</string>
    <string name="sharedialog.option.do_not_share.desc">The login data are neither stored nor shared by ShareWiFi.</string>
    <string name="sharedialog.option.do_not_longer_share.title">NO, UNDO SHARING</string>
    <string name="sharedialog.option.do_not_longer_share.desc">The login data are deleted from all devices except this one.</string>
    <string name="sharedialog.option.neveraskagain">The share notification on new connect is enabled. Disable?</string>
    <string name="sharedialog.option.notifications_disabled">The share notification on new connect is disabled. Enable?</string>

    <string name="sharedialog.option.groupshare.dialog.headtitle">With whom do you want to share %1$s?</string>
    <string name="sharedialog.option.groupshare.title_contactlist">Contact lists</string>
    <string name="sharedialog.option.groupshare.option_all_contacts">All my contacts</string>
    <string name="sharedialog.option.groupshare.title_single_contacts">Single contacts</string>

    <string name="sharedialog.info.card_share.title">SHARED WITH %1$s</string>
    <string name="sharedialog.info.card_share.title_everyone">\ EVERYONE</string>
    <string name="sharedialog.info.card_share.title_all_contacts">\ ALL MY CONTACTS</string>
    <string name="sharedialog.info.card_share.title_selected_contacts">\ SELECTED CONTACTS</string>
    <string name="sharedialog.info.card_share.title_my_devices">\ MY DEVICES</string>
    <string name="sharedialog.info.card_share.title_not_shared">NOT SHARED</string>
    <string name="sharedialog.info.card_share.subtitle_line1_by">By %1$s.</string>
    <string name="sharedialog.info.card_share.subtitle_line1_by_me">me</string>
    <string name="sharedialog_info_card_share_subtitle_line2_whom">%1$s can connect with this Wi-Fi.</string>
    <string name="sharedialog.info.card_share.subtitle_line2_whom_all">All</string>
    <string name="sharedialog.info.card_share.subtitle_line2_whom_contacts">Only selected contacts </string>
    <string name="sharedialog.info_card.share.subtitle_line2_whom_my_devices">All those devices where I\&apos;m logged in</string>
    <string name="sharedialog.info.card_share.subtitle_line2_whom_nobody">Nobody is receiving credentials from ShareWifi.</string>

    <string name="sharedialog.info_card.network.signal_strength">Signal strength</string>
    <string name="sharedialog.info_card.network.signal_strength.perfect">Excellent signal strength</string>
    <string name="sharedialog.info_card.network.signal_strength.good">Good signal strength</string>
    <string name="sharedialog.info_card.network.signal_strength.medium">Medium signal strength</string>
    <string name="sharedialog.info_card.network.signal_strength.poor">Poor signal strength</string>
    <string name="sharedialog.info_card.network.signal_strength.desc">~%1$s dBm</string>
    <string name="sharedialog.info_card.network.security.secure">High security</string>
    <string name="sharedialog.info_card.network.security.secure.wpa2">WPA2-encrypted</string>
    <string name="sharedialog.info_card.network.security.poor">Poor security</string>
    <string name="sharedialog.info_card.network.security.poor.wep">WEP-encrypted</string>
    <string name="sharedialog.info_card.network.security.dangerous">No security</string>
    <string name="sharedialog.info_card.network.security.dangerous.not_encrypted">Not encrypted, it is simple for experts to see what you\&apos;re doing.</string>
    <string name="sharedialog.info_card.network.internet_speed.fast">Fast internet</string>
    <string name="sharedialog.info_card.network.internet_speed.slow">Slow internet</string>
    <string name="sharedialog.info_card.network.internet_speed.desc">~%1$f Mbps</string>

    <string name="sharedialog.info.action.do_nothing">Do nothing</string>
    <string name="sharedialog.info.action.remove_network">Not connect with this network</string>
    <string name="sharedialog.info.action.put_user_on_spam">Not connect with networks from %1$s</string>
    <string name="sharedialog.info.action.abuse">Report abuse</string>
    
    <string name="networklist.inrange">In Range</string>
    <string name="networklist.outofrange">Out Of Range</string>

    <string name="networkstatus.connected">Connected</string>
    <string name="networkstatus.unknownnetwork">Unknown network.</string>
    <string name="networkstatus.hidden_wifi">Hidden Wi-Fi network</string>

    <string name="sharestatus.notshared">Not shared.</string>
    <string name="sharestatus.sharedByMe.withmydevices">Shared by me with my devices.</string>
    <string name="sharestatus.sharedByMe.withingroups">Shared by me within groups.</string>
    <string name="sharestatus.sharedByMe.witheveryone">Shared by me with everyone.</string>
    <string name="sharestatus.sharedWithMe.groups">Shared with me.</string>
    <string name="sharestatus.sharedWithMe.everyone">Shared with everyone.</string>

    <string name="network.dialog.title">Leave ShareWiFi to connect?</string>
    <string name="network.dialog.message">"Unfortunately you must leave ShareWiFi to connect with \"%1$s\"? Choose again \"%1$s\". Do you want to continue?"</string>

</resources>
