<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_header_networks">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_allnetworks"
                    android:icon="@drawable/ic_menu_filledcloud"
                    android:title="@string/nav_header_networks" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_header_social">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_contacts"
                    android:icon="@drawable/ic_menu_contact"
                    android:title="@string/_contacts" />
            </group>
        </menu>
    </item>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/_settings" />
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_menu_help"
                    android:title="@string/nav_help" />
            </group>

</menu>
